...
                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Start Battle">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="iLV-Q0-A4m"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Battlefield" id="7MT-1T-qDv" userLabel="Battlefield"/>
                    <navigationItem key="navigationItem" id="cx1-aJ-Hha"/>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="63" height="34"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Refresh">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <rect key="frame" x="70" y="0.0" width="81" height="34"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Create New">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hHe-s5-M2B" userLabel="Delete">
                                                    <rect key="frame" x="294" y="71" width="55" height="30"/>
                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    </subviews>
                                                </stackView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lr-OP-kfK">
                                                    <rect key="frame" x="98" y="5" width="50" height="20.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="294" y="34" width="55" height="30"/>
                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <state key="normal" title="Edit">
                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                                            <outlet property="intelligenceLabel" destination="Sdz-9o-aQw" id="8fa-nx-LG8"/>
                                            <outlet property="intelligenceSlider" destination="XQi-RP-TQl" id="GIj-jU-HHc"/>
                                            <outlet property="nameTextField" destination="jTx-1p-AgQ" id="VFV-Iv-d0x"/>
                                            <outlet property="rankLabel" destination="B95-iJ-ll7" id="yot-TA-Z8L"/>
                                            <outlet property="rankSlider" destination="t0x-Im-DJi" id="b2b-gt-kS3"/>
...
        <scene sceneID="1gC-MK-vq7">
            <objects>
                <viewController storyboardIdentifier="createTransformerViewController" id="4mi-RE-LvX" userLabel="Create Transformer" customClass="CreateTransformerViewController" customModule="TransformersAppSwift" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="SUO-r6-2Xk">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <rect key="frame" x="160" y="629" width="55" height="33"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Create"/>
                                <connections>
                                    <action selector="createTransformer:" destination="4mi-RE-LvX" eventType="touchUpInside" id="Myo-TW-iOk"/>
...
                                </constraints>
                                <segments>
                                    <segment title="Autobot"/>
                                    <segment title="Decepticon"/>
                                </segments>
                            </segmentedControl>
...
