...
        if (segue.identifier == "segueToBattlefieldScreen") {
            if (battlefieldReadiness()) {
            let destVC = segue.destination as! BattlefieldTransformerViewController
            destVC.transformerDataModelArray = self.transformerDataModelArray
            }
            else {
                let alert = UIAlertController(title: "TransformersApp", message: "Please add more transformers to start battle", preferredStyle: UIAlertController.Style.alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                self.present(alert, animated: false, completion: nil)
                return
            }
        }
    }
...
